Better responsive on mobile, fix bullets points bug

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -46,17 +46,6 @@ body {
        width: calc(100% - 100px);
        height: 400px;
 
-
-       @media (max-width: 767px) {
-           .option {
-               display: none;
-           }
-           .option:nth-child(-n + 6) {
-               display: flex;
-           }
-       }
-
-
        @media (min-width: 768px) and (max-width: 1023px) {
            .option {
                display: none;
@@ -97,7 +86,11 @@ body {
                border-radius: 40px;
                background-size: auto 100%;
 
-
+               @media (max-width: 767px) {
+                margin : 0px 100px 0px 100px;
+                        
+                    }
+                    
                .shadow {
                    box-shadow: inset 0 -120px 120px -120px black,
                        inset 0 -120px 120px -100px black;
